# meta-search

./: .fdignore  .gitignore  LICENSE  README.md  README.org  TODO.org  conftest.py  docker-cmd.py  docker-compose.yml  flake.nix  pyproject.toml
.github/workflows/: build_containers.yml
src/: manage.py
src/search/: admin.py  apps.py  bangs.py  bing_parser.py  browser_manager.py  constants.py  ddg_parser.py  google_parser.py  meta_search.py  models.py  tests.py  urls.py  views.py
src/search/migrations/: 0001_initial.py  0002_bang.py  0003_blockeddomain_blocklist.py  0004_alter_blocklist_user.py  0005_remove_blocklist_blocked_domains_and_more.py  0006_searchuser_default_search_engine_url.py  0007_alter_searchuser_default_search_engine_url.py  0008_alter_searchuser_default_search_engine_url.py
src/search/templates/: base.html
src/search/templates/registration/: _logout.html  login.html
src/search/templates/search/: index.html  settings.html
src/zweili_search/: __init__.py  asgi.py  manage.py  settings.py  urls.py  wsgi.py
src/zweili_search/zweili_search/: asgi.py  urls.py  wsgi.py
tests/: README.md  __init__.py  conftest.py  constants.py  test_bangs.py  test_ddg_functional.py  test_ddg_live.py  test_ddg_parser.py  test_google_parser.py  test_hanging_issue.py  test_integration.py  test_meta_search.py  test_models.py  test_playwright_integration.py  test_search_user_settings.py  test_settings.py  test_views.py
tooling/nginx/: nginx.conf
tooling/nix/dev_shell/: default.nix  shell_hook.sh
