[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zweili_search"
version = "0.1.0"
requires-python = ">=3.12"
description = "My attempt at a meta search engine."
authors = [
    {name = "Andreas Zweili", email = "andreas@zweili.ch"},
]
license = "GPL-3.0-or-later"
readme = {file = "README.org", content-type = "text/plain"}

[tool.hatch.build.targets.wheel]
packages = [
  "src/search/",
  "src/zweili_search/",
]

[tool.isort]
force_single_line=true
line_length = 88

[tool.mypy]
strict=true

[tool.ruff]
exclude = [
  "manage.py",
  "migrations",
]
src = ["src"]
line-length = 88

[tool.ruff.lint]
fixable = ["ALL"]
select = [ "ALL" ]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",  # Use of assert detected, we use pytest so kind of obvious
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.docformatter]
wrap-summaries = 88
wrap-descriptions = 88

